A few more options

--- a/renovate.json
+++ b/renovate.json
@@ -5,5 +5,7 @@
       "commands": ["git checkout ."],
       "fileFilters": ["**/*"]
     }
-  }
+  },
+  "postUpdateOptions": ["gomodeTidy"],
+  "allowedPostUpgradeCommands": [".*"]
 }
