--- a/renovate.json
+++ b/renovate.json
@@ -5,6 +5,5 @@
       "fileFilters": ["**/*"]
     }
   },
-  "postUpdateOptions": ["gomodTidy"],
-  "allowedPostUpgradeCommands": [".*"]
+  "postUpdateOptions": ["gomodTidy"]
 }
