--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,7 @@
 {
   "gomod": {
     "postUpgradeTasks": {
-      "commands": ["git checkout ."],
+      "commands": ["touch vendor/BUILD.bazel"],
       "fileFilters": ["**/*"]
     }
   },
